# datahub

./: CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  TECHNICAL_PAPER.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/domain/: entities.py  ports.py
docs/: ARCHITECTURE.md
scripts/: init_database.py
